# exact-cover-rs

./: .gitignore  Cargo.toml  README.md
examples/: basic_solver.rs  matrix.rs  multiples.rs  simple.rs  subsets.rs  sudoku.rs
src/: column.rs  cover.rs  iter.rs  lib.rs  node.rs  problem.rs  solver.rs
src/instances/: mod.rs  sudoku.rs
tests/: creation.rs  multiple.rs  partial_solve.rs  sudoku.rs
